# floe-ui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
floe-ui/: Cargo.toml  generate_icons.py
floe-ui-gallery/: Cargo.toml
floe-ui-gallery/src/: append_views.txt  main.rs
floe-ui/src/: lib.rs
floe-ui/src/components/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  dropdown.rs  icon.rs  input.rs  mod.rs  pagination.rs  progress.rs  radio.rs  select.rs  separator.rs  skeleton.rs  slider.rs  table.rs  tabs.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs  typography.rs
floe-ui/src/theme/: mod.rs  palette.rs  tokens.rs
web-demo/: package-lock.json  package.json
web-demo/src/app/: globals.css  layout.tsx  page.tsx
web-demo/src/app/docs/: layout.tsx  page.tsx
web-demo/src/app/docs/components/: page.tsx
web-demo/src/app/docs/components/[slug]/: page.tsx
web-demo/src/app/docs/installation/: page.tsx
web-demo/src/app/docs/theming/: page.tsx
web-demo/src/components/: api-table.tsx  code-block.tsx  icon-gallery.tsx  navbar.tsx
web-demo/src/lib/: component-data.tsx  icons.json
