[package]
name = "floe-ui"
version = "0.1.0"
edition = "2024"
description = "A shadcn/ui-inspired component library for the Iced GUI framework"
repository = "https://github.com/thangdevalone/floe-ui"
license = "MIT"

[dependencies]
iced = { version = "0.14", features = ["advanced"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
console = "0.15"
